--- a/tox.ini
+++ b/tox.ini
@@ -1,90 +1,14 @@
 [tox]
 downloadcache = {toxworkdir}/cache/
 
-envlist = py2.7-django1.10.
-          py2.7-django1.9,
-          py2.7-django1.8,
-          py2.7-django1.7,
-          py2.7-django1.6,
-          py2.6-django1.6,
-          py2.6-django1.5.4,
-          py2.7-django1.5,
-          py2.6-django1.5,
-          py2.7-django1.4,
-          py2.6-django1.4,
-          py2.7-django1.3,
-          py2.6-django1.3
+envlist = py27-django{1.8,1.9,1.10,1.11}
 
 [testenv]
-commands={envpython} oauth_provider/runtests/runtests.py
-
-[testenv:py2.7-django1.10]
-basepython = python2.7
-deps = django==1.10.3
-
-[testenv:py2.7-django1.9]
-basepython = python2.7
-deps = django==1.9.6
-
-[testenv:py2.7-django1.8]
-basepython = python2.7
-deps = django==1.8.2
-
-[testenv:py2.7-django1.7]
-basepython = python2.7
-deps = django==1.7.1
-
-[testenv:py2.7-django1.6]
-basepython = python2.7
 deps =
-    django==1.6.8
-    South
+    django1.8: Django>=1.8,<1.9
+    django1.9: Django>=1.9,<1.10
+    django1.10: Django>=1.10,<1.11
+    django1.11: Django>=1.11,<2
 
-[testenv:py2.6-django1.6]
-basepython = python2.6
-deps =
-    django==1.6.8
-    South
-
-[testenv:py2.6-django1.5.4]
-# test environment for issue #45
-basepython = python2.6
-deps =
-    django==1.5.4
-    South
-
-[testenv:py2.7-django1.5]
-basepython = python2.7
-deps =
-    django==1.5.11
-    South
-
-[testenv:py2.6-django1.5]
-basepython = python2.6
-deps =
-    django==1.5.11
-    South
-
-[testenv:py2.7-django1.4]
-basepython = python2.7
-deps =
-    django==1.4.16
-    South
-
-[testenv:py2.6-django1.4]
-basepython = python2.6
-deps =
-    django==1.4.16
-    South
-
-[testenv:py2.7-django1.3]
-basepython = python2.7
-deps =
-    django==1.3.7
-    South
-
-[testenv:py2.6-django1.3]
-basepython = python2.6
-deps =
-    django==1.3.7
-    South
+commands =
+    {envpython} oauth_provider/runtests/runtests.py
