ran python modernize and isort on repo and fixed some tests for python3

--- a/tox.ini
+++ b/tox.ini
@@ -1,7 +1,7 @@
 [tox]
 downloadcache = {toxworkdir}/cache/
 
-envlist = py2.7-django{1.11,1.10,1.9,1.8}
+envlist = py{27,36}-django{1.11,1.10,1.9,1.8}
 
 [testenv]
 commands={envpython} oauth_provider/runtests/runtests.py
