isort, modernize. update oauth2 package with master branch. fix tests cases.
experiment with setup

experiment with setup

experiment with setup

removed python 3.7 setup

changes made as suggested

changes made as suggested

updated the tox config as suggested

changes made as suggested

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,11 @@
 sudo: false
 language: python
 python:
-  - "2.7"
+  - 2.7
+  - 3.6
+
+env:
+  - TOXENV=django111
 
 install:
   - pip install -U tox
