--- a/tox.ini
+++ b/tox.ini
@@ -1,13 +1,10 @@
 [tox]
 downloadcache = {toxworkdir}/cache/
 
-envlist = py2.7-django{1.11,1.10,1.9,1.8}
+envlist = py{27,36}-django{111}
 
 [testenv]
 commands={envpython} oauth_provider/runtests/runtests.py
 deps=
     -r{toxinidir}/test-requirements.txt
-    django1.8: Django>=1.8,<1.9
-    django1.9: Django>=1.9,<1.19
-    django1.10: Django>=1.10,<1.11
-    django1.11: Django>=1.11,<2
+    django111: Django>=1.11,<2
