--- a/.travis.yml
+++ b/.travis.yml
@@ -1,14 +1,14 @@
 sudo: false
 language: python
 python:
-  - 2.7
-  - 3.6
+  - 3.5
+  - 3.8
 
 env:
-  - TOXENV=django111
+  - TOXENV=django22
 
 install:
-  - pip install -U tox
+  - pip install -r test-requirements.txt
 
 script:
   - tox
