--- a/tox.ini
+++ b/tox.ini
@@ -1,10 +1,11 @@
 [tox]
 downloadcache = {toxworkdir}/cache/
 
-envlist = py{27,36}-django{111}
+envlist = py35-django22, py38-django{22,30}
 
 [testenv]
 commands={envpython} oauth_provider/runtests/runtests.py
 deps=
     -r{toxinidir}/test-requirements.txt
-    django111: Django>=1.11,<2
+    django22: Django>=2.2,<2.3
+    django30: Django>=3.0,<3.1
